--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -1,7 +1,3 @@
-<%= simple_form_for @campaign do |f| %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.input :goal %>
-  <%= f.input :ends_on %>
-  <%= f.submit "Create Campaign" %>
-<% end %>
+
+<%= render partial: "form" %>
+
